--- a/devops.properties
+++ b/devops.properties
@@ -1,5 +1,5 @@
-projectPath=https://github.com/bhanuprakashbg/BankWebApp.git;
-java="1.8";
-maven='1.3';
+projectPath=https://github.com/bhanuprakashbg/BankWebApp.git
+java="1.8"
+maven='1.3'
 
 
