--- a/Properties/pipeline.properties
+++ b/Properties/pipeline.properties
@@ -1,5 +1,12 @@
-projectPath=https://github.com/bhanuprakashbg/BankWebApp.git
-java="1.8"
-maven='1.3'
+appPath=https://github.com/bhanuprakashbg/BankWebApp.git
+JenkinsFile=https://github.com/bhanuprakashbg/UtilRepo.git
+java=1.8
+maven=3.5.3
+tomcat=8.5.5
+codeCoverage=80
+unitTesting=100
+codeAnalysis=0
+
+
 
 
