--- a/Properties/pipeline.properties
+++ b/Properties/pipeline.properties
@@ -1,5 +1,8 @@
 appPath=https://github.com/bhanuprakashbg/BankWebApp.git
 JenkinsFile=https://github.com/bhanuprakashbg/UtilRepo.git
+artifactoryURL=http://localhost:8081/artifactory
+artifactoryUsername=admin
+artifactoryPassword=password
 java=1.8
 maven=3.5.3
 tomcat=8.5.5
